task3-istio/authorization/default-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: default-deny
  namespace: payments

spec: {}
